# agentica-server

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  get_test_versions.py  pre_build.py  pyproject.toml  pyrightconfig.json  ruff.toml  setup.py
.github/workflows/: cla.yml
src/: gen.py
src/agentic/: agent.py  models.py  protocol.py  version_policy.py
src/agentic/monads/: __init__.py  common.py  prompter.py  safe_formatter.py  template.py
src/agentic/monads/json_tool/: base.py
src/agentic/monads/json_tool/text/standard/agent/: system.txt  tools_system.txt  user.txt
src/agentic/monads/json_tool/text/standard/function/: failure.txt  system.txt  tools.txt  user.txt
src/agentic/monads/repl_tool/multi_turn/: anthropic.py  openai.py
src/agentic/monads/repl_tool/multi_turn/text/anthropic/: execution-role.txt
src/agentic/monads/repl_tool/multi_turn/text/anthropic/agent/: user.txt
src/agentic/monads/repl_tool/multi_turn/text/anthropic/function/: starter.txt  user.txt
src/agentic/monads/repl_tool/multi_turn/text/anthropic/tags/: additional_python_resources.txt  execution.txt  expected_return_type.txt  function_inputs.txt  instructions.txt  task.txt
src/agentic/monads/repl_tool/multi_turn/text/explain/: agent-error.txt  empty-output.txt  empty-response.txt  few-shot.yaml  missing-code.txt  multiple-code-blocks.txt  no-custom-classes.txt  show-definition.txt  single-code-block.txt  top-level-await.txt  uncaught-exit.txt  use-modules.txt
src/agentic/monads/repl_tool/multi_turn/text/openai/: instruction-role.txt
src/agentic/monads/repl_tool/multi_turn/text/openai/agent/: interactions.txt  notes.txt  objectives.txt  output.txt  starter.txt  system.txt  user.txt  workflow.txt
src/agentic/monads/repl_tool/multi_turn/text/openai/function/: interactions.txt  notes.txt  objectives.txt  output.txt  starter.txt  system.txt  user.txt  workflow.txt
src/agentic/monads/repl_tool/multi_turn/text/openai/tags/: additional_python_resources.txt  execution.txt  (+4 more)
src/application/: __main__.py  defaults.py  http_client.py  main.py  metrics.py  responses.py  routes.py  tui.py
src/auth/: __init__.py  request_logging_middleware.py
src/com/: README.md  __init__.py  abstract.py  actions.py  actions_basic.py  actions_legacy_json.py  actions_model.py  actions_repl.py  all.py  constraints.py  context.py  context_legacy_json.py  deltas.py  do.py  exceptions.py  functional.py  gen_model.py  monads.py  monads_basic.py  monads_model.py  monads_repl.py  roles.py
src/com/apis/: __init__.py  openai_chat_completions.py  vllm_openai_chat_completions.py
src/com/conversion/: __init__.py  abstract.py  openai_completions.py
src/com/conversion/openai_chat_completions/: __init__.py  anthropic.py  check_schema.py  openai.py  utils.py  utils_json.py
src/development/: async_in_sandbox.py  do_notation.py  json_schema_example.py  mocked_endpoint.py  multi_turn_repl.py  simple_logger.py  tool_monad.py  warp_in_ee.py
src/development/fancy_logger/: pyproject.toml
src/development/fancy_logger/src/fancy_logger/: __init__.py  __main__.py  app.py  store.py
src/development/fancy_logger/src/fancy_logger/static/: app.js  styles.css
src/development/fancy_logger/src/fancy_logger/templates/: index.html
src/development/mock_endpoint/: main.py  server.py
src/development/mock_endpoint/web/: index.html  main.js  styles.css
src/inference/: __init__.py  endpoint.py
src/inference/mock/: __init__.py  endpoint.py  queue.py
src/messages/: __init__.py  genai_events.py  holder.py  hybrid_notifier.py  notifier.py  otel_notifier.py  poster.py
src/sandbox/: .gitignore  __init__.py
src/sandbox/guest/: agent_error.py  agent_repl.py  common.py  execenv.py  generate_prelude.py  json_schemas.py  poll_loop.py  pyproject.toml  safe_repr.py  stdio_execenv.py  stubs.py  the_prelude.py
src/sandbox/host/: Cargo.toml  __init__.py  py_runner.py  pyproject.toml  sandbox.py
src/sandbox/host/src/: lib.rs
src/sandbox/wit/: env.wit
src/server_session_manager/: __init__.py  multiplexer.py  server_session_manager.py  transport.py
src/sm_testing/: __init__.py  sandbox_tst_ctx.py
test/: conftest.py  test_agent_repl.py  test_agent_world_futures.py  test_datetime_sandbox.py  test_http_connections_limit.py  test_loop_on_socket_cleanup.py  test_multi_sandbox.py  test_multiplexer_malformed_messages.py  test_safe_repr.py  test_sandbox.py  test_sandbox_blocking.py  test_sandbox_new.py  test_stub_gen.py  test_stubs_where.py  test_test_context_usage.py  test_version_policy.py
test/com/conversion/unit/: test_anthropic.py  test_openai.py  test_utils.py
test/misc/: test_tag_parsing.py
