[project]
name = "agentica-server"
version = "0.3.1"
description = "Session manager for VM Deployment"
requires-python = "==3.12.*"
dependencies = [
    "agentica-internal",
    "python-dotenv>=1.1.1",
    "host",
    "litestar>=2.17.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
    "openai>=1.106.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "dotenv>=0.9.9",
    "packaging>=25.0",
    # OpenTelemetry for distributed tracing
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    # Prometheus metrics
    "prometheus-client>=0.20.0",
    "opentelemetry-proto>=1.38.0",
    # for detecting open file leaks
    "psutil>=7.1.3",
    "ansi2html>=1.9.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.2.0",
    "pytest-timeout>=2.4.0",
    "pytest-subtests>=0.14.2",
    "vulture>=2.14",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
    "prompt-toolkit>=3.0.52",
    "textual>=6.7.0",
]

[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
host = { path = "src/sandbox/host", editable = true }
# agentica-internal comes from PyPI, if you want to build it locally, specify the path here

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["json_schema*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[project.scripts]
gen = "gen:main"
agentica-server = "application.main:main_sync"

[tool.uv]
link-mode = "copy"

[tool.pytest.ini_options]
timeout_method = "thread"
filterwarnings = [
    'ignore:Pickle, copy, and deepcopy support will be removed from itertools:DeprecationWarning'
]
addopts = "--cov=src --cov-report=html"

[tool.vulture]
exclude = [
    "src/sandbox/guest/.venv/",
    "src/sandbox/build/"
]
ignore_names = ["exc_tb"]
paths = ["src/"]
min_confidence = 80
