[project]
name = "fancy-logger"
version = "0.1.0"
description = "Simple web UI to explore Session Manager log events"
authors = [{ name = "samuel", email = "samuel@symbolica.ai" }]
requires-python = ">=3.12"
dependencies = [
  "litestar>=2.8.3",
  "sniffio>=1.3.1",
  "uvicorn>=0.30.0",
]

[project.scripts]
fancy-logger = "fancy_logger.__main__:main"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fancy_logger"]
