[build-system]
requires = ["maturin[patchelf]>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "host"
version = "0.1.0"
requires-python = "==3.12.0"
dependencies = [
    # maturin
    "maturin[patchelf]>=1.0,<2.0",
    # host also needs to depend on all things guest depends on (for py_runner.py)
    "agentica-internal",
    "typeguard>=4.4.4",
]

# we cannot depend on guest directly, because editable must be set to false in "guest"
[tool.uv.sources]
# agentica-internal comes from PyPI, if you want to build it locally, specify the path here

[tool.uv]
link-mode = "copy"
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}]
